--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -2,39 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  
-}
-
+/* Custom styles */
 body {
-  background-color: #f3f3f9;
-  font-family: "Poppins", sans-serif;
+  background-color: rgb(246, 246, 246);
 }
-
-/* src/components/layout/AdminLayout.css */
-/* 
-.admin-layout {
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-}
-
-.main-content {
-  display: flex;
-  flex: 1;
-}
-
-.content-area {
-  flex: 1;
-  padding: 20px;
-}
-
-footer {
-  background-color: #333;
-  color: white;
-  padding: 10px;
-  text-align: center;
-} */
